--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -89,6 +89,7 @@
 				@media (max-width: 1000px) {
 					.hamburger-btn {
 						display: flex;
+						padding: 1rem;
 					}
 
 					.resume-btn {
